--- a/assets/css/components/_navigator.css
+++ b/assets/css/components/_navigator.css
@@ -1,14 +1,23 @@
+/* Componente Navigator */
 .navigator {
-  height: 80vh;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80%;
   position: relative;
+  /* background-color: blue; */
+}
+
+.navigator ul {
+  /* margin: 60px 0; */
+  z-index: 1;
+  display: flex;
+  /* flex-direction: row; */
 }
 
 .navigator ul li {
-  margin: 60px 0;
+  margin: 0 5px;
 }
 
 .navigator ul li:first-child {
@@ -19,11 +28,11 @@
   margin-bottom: 0;
 }
 
-.navigator ul li a{
+.navigator ul li a {
   color: white;
-  border: solid 2px white;
-  width:45px;
-  height:45px;
+  border: 2px solid white;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   background-color: black;
   display: flex;
@@ -32,26 +41,86 @@
 }
 
 .navigator::before {
-  content: '';
+  content: "";
   position: absolute;
-  top: 0;
-  width: 2px;
-  height: 100%;
+  /* top: 0; */
+  width: 100%;
+  height: 2px;
   background-color: white;
   z-index: 0;
 }
 
-.navigator ul{
-  z-index: 1;
-}
-
-.navigator ul li a:hover, 
+.navigator ul li a:hover,
 .navigator ul li a.active {
   color: var(--primary-color);
   background-color: white;
 }
 
-.navigator .navigator__icon{
+.navigator .navigator__icon {
   position: absolute;
-  top: -20px;
+  left: -20px;
+  rotate: -90deg;
+}
+
+@media (min-width: 768px) {
+  /* Componente Navigator */
+ .navigator {
+    height: 80vh;
+    width: 100%;
+  }
+
+  .navigator ul {
+    display: block;
+  }
+
+  .navigator ul li {
+    margin: 60px 0;
+  }
+
+  .navigator ul li:first-child {
+    margin-top: 0;
+  }
+
+  .navigator ul li:last-child {
+    margin-bottom: 0;
+  }
+
+  /* .navigator ul li a {
+    color: white;
+    border: 2px solid white;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  } */
+
+  .navigator::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 2px;
+    height: 100%;
+    background-color: white;
+    z-index: 0;
+  }
+
+  /* .navigator ul {
+    z-index: 1;
+  } */
+
+  /* .navigator ul li a:hover,
+  .navigator ul li a.active {
+    color: var(--primary-color);
+    background-color: white;
+  } */
+
+  .navigator .navigator__icon {
+    position: absolute;
+    top: -20px;
+    left: 25px;
+    rotate: 0deg;
+  }
 }
