--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-:root {
-  --primary-color: #B9001F;
+:root { /* O chama para criar as variáveis css */
+  --primary-color: #B9001F
 }
 
 body {
   font-family: 'Poppins', sans-serif;
+  background-color: var(--primary-color);
 }
