--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -4,8 +4,7 @@
   vertical-align: baseline;
   list-style: none;
   border: 0;
-  color: #FFF;
-  font-family: "Poppins", sans-serif;
+  color: #fff;
   font-size: 16px;
   text-decoration: none;
 }
