--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -1,6 +1,6 @@
 /* Importando as propriedades de reset e global css */
-@import url('/global.css');
-@import url('/reset.css');
+@import url('./global.css');
+@import url('./reset.css');
 
 body {
   background-color: var(--primary-color);
