--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,9 +1,9 @@
-@import url('/spider-man-multiversos-dio/assets/css/reset.css');
-@import url('/spider-man-multiversos-dio/assets/css/global.css');
-@import url('/spider-man-multiversos-dio/assets/css/components/_navigator.css');
-@import url('/spider-man-multiversos-dio/assets/css/components/_pills.css');
-@import url('/spider-man-multiversos-dio/assets/css/components/_link-button.css');
-@import url('/spider-man-multiversos-dio/assets/css/components/_gallery.css');
+@import url('./reset.css');
+@import url('./global.css');
+@import url('./components/_navigator.css');
+@import url('./components/_pills.css');
+@import url('./components/_link-button.css');
+@import url('./components/_gallery.css');
 
 .s-wrapper {
   display: flex;
